workspace/python_build_sample.txt
Processing /home/user/mypackage
  Preparing metadata (setup.py) ... done
Building wheels for collected packages: mypackage
  Building wheel for mypackage (setup.py) ... error
  error: subprocess-exited-with-error
  
  × python setup.py bdist_wheel did not run successfully.
  │ exit code: 1
  ╰─> [6 lines of output]
      running bdist_wheel
      running build
      running build_py
      copying mypackage/__init__.py -> build/lib/mypackage
      running build_ext
      building 'mypackage.cython_module' extension
      error: Microsoft Visual C++ 14.0 is required. Get it with "Microsoft Visual C++ Build Tools": https://visualstudio.microsoft.com/downloads/
      [end of output]
  
  note: This error originates from a subprocess, and is likely not a problem with pip.
  ERROR: Failed building wheel for mypackage
  Failed to build mypackage
ERROR: Could not build wheels for mypackage, which is required to install pyproject.toml-based projects

Installing collected packages: numpy, requests, mypackage
  Attempting uninstall: mypackage
    Found existing installation: mypackage 0.1.0
    Uninstalling mypackage-0.1.0:
      Successfully uninstalled mypackage-0.1.0
Successfully installed numpy-1.21.0 requests-2.26.0 mypackage-0.2.0

running pytest
platform linux -- Python 3.9.7, pytest-6.2.4, py-1.10.0, pluggy-0.13.1
collected 15 items

tests/test_basic.py::test_import PASSED                                  [ 6%]
tests/test_basic.py::test_function FAILED                               [13%]
tests/test_advanced.py::test_calculation ERROR                          [20%]

=================================== FAILURES ===================================
________________________________ test_function _________________________________

    def test_function():
>       assert mypackage.add(2, 3) == 6
E       AssertionError: assert 5 == 6
E        +  where 5 = <function add at 0x7f8b8c0d5e80>(2, 3)

tests/test_basic.py:12: AssertionError

=================================== ERRORS ===================================
_______________________________ test_calculation _______________________________

tests/test_advanced.py:8: in test_calculation
    result = mypackage.complex_calc(data)
tests/test_advanced.py:9: in test_calculation
    assert result > 0
E   TypeError: '>' not supported between instances of 'NoneType' and 'int'

=========================== short test summary info ============================
FAILED tests/test_basic.py::test_function - AssertionError: assert 5 == 6
ERROR tests/test_advanced.py::test_calculation - TypeError: '>' not supported between instances of 'NoneType' and 'int'
=========================== 1 failed, 1 error, 13 passed in 2.35s ===========================

pip install --upgrade setuptools wheel
Requirement already satisfied: setuptools in /usr/local/lib/python3.9/site-packages (57.4.0)
Requirement already satisfied: wheel in /usr/local/lib/python3.9/site-packages (0.36.2)

python setup.py build
running build
running build_py
copying mypackage/__init__.py -> build/lib/mypackage
copying mypackage/utils.py -> build/lib/mypackage  
running build_ext
building 'mypackage.fast_math' extension
gcc -pthread -B /usr/local/lib/python3.9/site-packages/numpy/core/lib -Wno-unused-result -Wsign-compare -DNDEBUG -g -fwrapv -O3 -Wall -fPIC -I/usr/local/include/python3.9 -c mypackage/fast_math.c -o build/temp.linux-x86_64-3.9/mypackage/fast_math.o
mypackage/fast_math.c:15:10: error: #include expects "FILENAME" or <FILENAME>
   15 | #include Python.h
      |          ^~~~~~~~~
mypackage/fast_math.c:45:1: error: unknown type name 'PyObject'
   45 | PyObject* fast_add(PyObject* self, PyObject* args) {
      | ^~~~~~~~
mypackage/fast_math.c:50:12: warning: implicit declaration of function 'PyArg_ParseTuple' [-Wimplicit-function-declaration]
   50 |     if (!PyArg_ParseTuple(args, "dd", &a, &b))
      |            ^~~~~~~~~~~~~~~~
error: command 'gcc' failed with exit status 1